timer funcional para abrir fase e menu

--- a/eclipse-workspace/Jogo1/.classpath
+++ b/eclipse-workspace/Jogo1/.classpath
@@ -11,6 +11,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/pc/Documents/GitHub/Quack-Fire/eclipse-workspace/Jogo1/lib/org.json.jar"/>
+	<classpathentry kind="lib" path="lib/org.json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
